# MyVideoPlayer

app/: build.gradle
app/src/androidTest/java/com/wlx/myvideoplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wlx/myvideoplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wlx/myvideoplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
videoplayerlib/: CMakeLists.txt  build.gradle
videoplayerlib/src/androidTest/java/com/wlx/videoplayerlib/: ExampleInstrumentedTest.java
videoplayerlib/src/main/: AndroidManifest.xml
videoplayerlib/src/main/java/com/wlx/videoplayerlib/: WlxVideoPlayer.java
videoplayerlib/src/main/java/com/wlx/videoplayerlib/listener/: OnFinishedListener.java  OnPreparedListener.java  OnScheduleChangedListener.java
videoplayerlib/src/main/jni/videoplayer/cpp/: AVSynchronizer.cpp  AndroidLog.cpp  AudioFrameQueue.cpp  AudioOutput.cpp  OnCallJava.cpp  VideoDecoder.cpp  VideoFrameQueue.cpp  VideoOutput.cpp  VideoPlayerController.cpp  WlxPlayerState.cpp  WlxQueue.cpp  movie_frame.cpp  wlxvideoplayer.cpp
videoplayerlib/src/main/jni/videoplayer/include/: AVSynchronizer.h  AndroidLog.h  AudioFrameQueue.h  AudioOutput.h  EnumCurrentPlayState.h  MyTime.h  OnCallJava.h  VideoDecoder.h  VideoFrameQueue.h  VideoOutput.h  VideoPlayerController.h  WlxPlayerState.h  WlxQueue.h  movie_frame.h
videoplayerlib/src/test/java/com/wlx/videoplayerlib/: ExampleUnitTest.java
